--- a/css/machine_photos.css
+++ b/css/machine_photos.css
@@ -57,30 +57,50 @@
     justify-content: center;
     align-items: center;
 
+
+
 }
 
 .machine-card-imgs-container{
    display: flex;
    flex-direction: row;
-   column-gap: 7vW;
+   column-gap: 20pt;
+
 
    /* height: 67vh;
    width :85vw; */
    align-items: center;
    justify-content: center;
+   margin-bottom: 20px;
 }
 
 .machine-card-imgs-secondary-container{
     display: flex;
     flex-direction: column;
-    row-gap: 7vmin;
+    row-gap: 2%;
+    height: 30vmax;
 }
+
+
 
 .machine-card-img-primary{
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: grey;
-    height: 55vmax;
-    width: 55vmax;
+    height: 30vmax;
+    width: 35Vw;
+
 }
+
+@media only screen and (max-width: 764px) {
+    .machine-card-videos iframe {
+      width: 100%;
+      height: 230px;
+    }
+  }
+@media only screen and (max-width: 910px ) {
+    .machine-card-img-primary{
+        width: 60Vw;
+    }
+  }
