--- a/css/utilities.css
+++ b/css/utilities.css
@@ -1,4 +1,3 @@
-
 .quote-button-container{
     display : flex;
     justify-content: center;
@@ -25,7 +24,12 @@
 
 }
 
-@media only screen and (max-width: 966px ) {
+@media only screen and (max-width: 992px ) {
+    .head{
+        margin-top:10vh;
+    }
+  }
+@media only screen and (max-width: 600px ) {
     .head{
         margin-top:8vh;
     }
